--- a/resources.html
+++ b/resources.html
@@ -4,18 +4,26 @@
 <!--[if IE 8]><html class="preIE9"><![endif]-->
 <!--[if gte IE 9]><!--><html><!--<![endif]-->
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">
+
     <meta charset="UTF-8">
     <title>title</title>
   <meta name="author" content="Martin Pelayo, John Grillo, Richard Farr">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
-  <link rel="stylesheet" href="mathstyle.css" type="text/css">
+  <link rel="stylesheet" href="css/mathstyle.css" type="text/css">
   </head>
-  <body>
+  <body background="http://cdn.wallpapersafari.com/25/68/KiWaZL.jpg">
+<div id="header">
+    <a href="index.html">home</a>
+     <h1>Here are a few helpful recources that will help you on your way.</h1>
+   </div>
    <main>
-     <h1>WELCOME TO THE KIDS MATH GAME. LOOK AT HOW PURTY IT IS!</h1>
-
-
+     <ul>
+       <li><a href="https://www.khanacademy.org/">khanacademy</a></li>
+       <li><a href="https://www.purplemath.com">PurpleMath</a></li>
+       <li><a href="https://betterexplained.com/">BetterExplained</a></li>
+     </ul>
    </main>
    <script type="text/javascript" src="john.js"></script>
    <script type="text/javascript" src="martin.js"></script>
