--- a/about.html
+++ b/about.html
@@ -4,16 +4,46 @@
 <!--[if IE 8]><html class="preIE9"><![endif]-->
 <!--[if gte IE 9]><!--><html><!--<![endif]-->
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">
+
     <meta charset="UTF-8">
     <title>title</title>
   <meta name="author" content="Martin Pelayo, John Grillo, Richard Farr">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
-  <link rel="stylesheet" href="mathstyle.css" type="text/css">
+  <link rel="stylesheet" href="css/mathstyle.css" type="text/css">
   </head>
-  <body>
-   <main>
-     <h1>WELCOME TO THE KIDS MATH GAME. LOOK AT HOW PURTY IT IS!</h1>
+  <body background="http://cdn.wallpapersafari.com/25/68/KiWaZL.jpg">
+<div id="header">
+    <a href="index.html">home</a>
+       <h1>About the programmers who made this site.</h1>
+     </div>
+     <main>
+     <div id="who_are_we">
+       <img src="assets/imgs/who_are_we.png" alt="" width="400px" height="300px">
+    </div>
+
+   <div id="john">
+     <h2>John</h2>
+     <img src="assets/imgs/john-grillo-fresh.jpg" alt="">
+     <p>JOHN GRILLO BIO
+	John Grillo has been developing websites and web applications since the mid 90's. “Back then, Space Jam was quite literally the coolest website ever. It's an internet relic, now, but my god did it inspire me...to be better so I could charge 3x as much as whatever the WB paid that guy for.”
+	John Grillo has ample experience in JavaScript (and libraries including jQuery, Angular and node.js), HTML5, CSS3 as well as various flavors of SQL.  “MSSQL/TSQL is my favorite. It is more stable than MySQL.”
+	John Grillo is an alumni of Pacific University in Forest Grove and has been enrolled in PSU and PCC as well. “I'm taking CodeFellows as a fun refresher course. I have to say that there have been some surprisingly challenging aspects of it. I'm impressed. My favorite project to date has to be the KidsMathGame. I can think of no better way of rebuilding a portfolio, if you have to, than taking a software developer's bootcamp.”
+	John Grillo is an Eagle Scout in the Boy Scouts of America. “My project was using natural predators to control the mosquito population. Mosquitos love lactic acid and carbon dioxide. Guess who whas those in abundance? Athletes! Hillsboro made a stadium next to sizeable bodies of stagnant water. I knew nothing but I knuckled down, did the research and made sure the predators, swallows [EDIT: It is unclear if the they were Mongolian or European].”
+	When not saving the world, John Grillo likes to spend his time playing basketball, exploring the Pacific NW and working on his short stories and novels. “It's a book of ghost stories for ghosts. It is called “Phantasmagoria: The Dream Pageant”.”
+     </p>
+   </div>
+
+   <div id="martin">
+     <h2>Martin</h2>
+      <img src="assets/imgs/martin-pelayo.jpg" alt="" style="width:200px;height:200px;">
+     <p>This is some example code.........
+       ....................................
+       ....................................
+       ....................................
+     </p>
+   </div>
 
 
    </main>
