adding current work to upstream master

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Martin Pelayo, John Grillo, Richard Farr">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
-  <link rel="stylesheet" href="mathstyle.css" type="text/css">
+  <link rel="stylesheet" href="css/mathstyle.css" type="text/css">
   </head>
   <body>
    <main>
@@ -18,7 +18,7 @@
 
 
    </main>
-   <script type="text/javascript" src="john.js"></script>
+   <script type="text/javascript" src="assets/js/john.js"></script>
    <script type="text/javascript" src="martin.js"></script>
    <script type="text/javascript" src="farr.js"></script>
   </body>
