game new properly stores new player object, handles form information on click and checks for game speed--how many seconds each player has based on choice. Also, input form has max character length of 30 and farr.js is now sourced correctly on index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        <h2>Enter your username to start playing</h2>
        <fieldset>
          <legend>Your Name</legend>
-         <input type="text" name="userName" id="userName" value="Pick a username">
+         <input type="text" name="userName" id="userName" maxlength="30" value="Pick a username">
          <br>
          <br>
        </fieldset>
@@ -39,7 +39,7 @@
        </fieldset>
        <fieldset>
          <legend>speed</legend>
-         <input type="radio" name="speedType" value="easy"> Easy - 20 seconds to answer each one. <br>
+         <input type="radio" name="speedType" value="easy" checked> Easy - 20 seconds to answer each one. <br>
          <input type="radio" name="speedType" value="medium">Medium - 10 seconds, no sweat. <br>
          <input type="radio" name="speedType" value="hard"> Hard - 5. 5 what? 5 nothing! <br>
        </fieldset>
@@ -53,6 +53,6 @@
 
     <script type="text/javascript" src="assets/js/john.js"></script>
     <script type="text/javascript" src="assets/js/martin.js"></script>
-    <script type="text/javascript" src="farr.js"></script>
+    <script type="text/javascript" src="assets/js/farr.js"></script>
   </body>
 </html>
