--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="header">
       <a href="resources.html">Recources</a>
       <a href="about.html">About us</a>
+      <a href="other_input.html">Make your complaints here.</a>
      <h1>WELCOME TO THE KIDS MATH GAME. LOOK AT HOW PURTY IT IS!</h1>
    </div>
    <main>
@@ -45,8 +46,6 @@
        </fieldset>
        <input type="submit" value="submit" name="submit" id="submit">
      </form>
-
-     <div id="thisone" onclick="waithide()"></div>
 
 
     </main>
