--- a/about.html
+++ b/about.html
@@ -16,6 +16,8 @@
   <body background="http://cdn.wallpapersafari.com/25/68/KiWaZL.jpg">
 <div id="header">
     <a href="index.html">home</a>
+    <a href="resources.html">Recources</a>
+    <a href="other_input.html">Make your complaints here.</a>
        <h1>About the programmers who made this site.</h1>
      </div>
      <main>
