--- a/resources.html
+++ b/resources.html
@@ -15,9 +15,10 @@
   </head>
   <body background="http://cdn.wallpapersafari.com/25/68/KiWaZL.jpg">
 <div id="header">
-    <a href="index.html">home</a>
-    <a href="about.html">About us</a>
-    <a href="other_input.html">Make your complaints here.</a>
+  <a href="index.html">home</a>
+  <a href="resources.html">Recources</a>
+  <a href="about.html">About us</a>
+  <a href="other_input.html">Make your complaints here.</a>
      <h1>Here are a few helpful recources that will help you on your way.</h1>
    </div>
    <main>
