--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <!--[if IE 8]><html class="preIE9"><![endif]-->
 <!--[if gte IE 9]><!--><html><!--<![endif]-->
   <head>
-
 <link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">
 <meta charset="UTF-8">
     <title>title</title>
@@ -15,6 +14,7 @@
   </head>
   <body background="http://cdn.wallpapersafari.com/25/68/KiWaZL.jpg">
     <div id="header">
+      <a href="index.html">home</a>
       <a href="resources.html">Recources</a>
       <a href="about.html">About us</a>
       <a href="other_input.html">Make your complaints here.</a>
@@ -47,9 +47,20 @@
        <input type="submit" value="submit" name="submit" id="submit">
      </form>
 
+<!-- Starting the form for John's game functions.
+     This should apear after the above submit button is clicked perhaps.
+
+    <div id="game_div"
+      <form id="game">
+        <h2>Your playing the best math game ever</h2>
+        Type your answer here:<br>
+          <input type="text" name="comment" value="" size="50">
+          <input type="submit" value="Submit Answer">
+      </form>
+    </div>
+-->
 
     </main>
-
     <script type="text/javascript" src="assets/js/john.js"></script>
     <script type="text/javascript" src="assets/js/martin.js"></script>
     <script type="text/javascript" src="assets/js/farr.js"></script>
