css work, instruction text

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">
 
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>KidsMath</title>
   <meta name="author" content="Martin Pelayo, John Grillo, Richard Farr">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
@@ -18,7 +18,7 @@
   <a href="index.html">home</a>
   <a href="resources.html">Recources</a>
   <a href="about.html">About us</a>
-  <a href="other_input.html">Make your complaints here.</a>
+  <li><a href="other_input.html">Get Your Score</a></li>
        <h1>About the programmers who made this site.</h1>
      </div>
      <main>
