--- a/other_input.html
+++ b/other_input.html
@@ -3,7 +3,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">
     <meta charset="UTF-8">
-        <title>title</title>
+        <title>KidsMath</title>
       <meta name="author" content="Martin Pelayo, John Grillo, Richard Farr">
       <meta name="description" content="description here">
       <meta name="keywords" content="keywords,here">
