--- a/play.html
+++ b/play.html
@@ -5,7 +5,7 @@
 <!--[if gte IE 9]><!--><html><!--<![endif]-->
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>KidsMath</title>
   <meta name="author" content="Martin Pelayo, John Grillo, Richard Farr">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
@@ -13,8 +13,19 @@
   </head>
   <body>
    <main>
-     <h1>WELCOME TO THE KIDS MATH GAME. LOOK AT HOW PURTY IT IS!</h1>
-
+     <div id="header">
+       <a href="index.html">Home</a>
+       <a href="resources.html">Resources</a>
+       <a href="about.html">About us</a>
+       <a href="other_input.html">Make your complaints here.</a>
+      <h1>WELCOME TO THE KIDS MATH GAME. LOOK AT HOW PURTY IT IS!</h1>
+    </div>
+     <div class="number-images">
+      <h1>Solve the problem:</h1>
+      <ul id="images">
+      </ul>
+      <!-- insert form element to answer problem here -->
+    </div>
 
    </main>
    <script type="text/javascript" src="john.js"></script>
