--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">
 
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>KidsMath</title>
   <meta name="author" content="Martin Pelayo, John Grillo, Richard Farr">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
@@ -15,11 +15,11 @@
   </head>
   <body background="http://cdn.wallpapersafari.com/25/68/KiWaZL.jpg">
 <div id="header">
-  <a href="index.html">home</a>
-  <a href="resources.html">Recources</a>
+  <a href="index.html">Home</a>
+  <a href="resources.html">Resources</a>
   <a href="about.html">About us</a>
   <a href="other_input.html">Make your complaints here.</a>
-     <h1>Here are a few helpful recources that will help you on your way.</h1>
+     <h1>Here are a few helpful resources that will help you on your way.</h1>
    </div>
    <main>
      <ul>
