--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
 <!--[if gte IE 9]><!--><html><!--<![endif]-->
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>KidsMath</title>
   <meta name="author" content="Martin Pelayo, John Grillo, Richard Farr">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
