--- a/about.html
+++ b/about.html
@@ -3,39 +3,44 @@
 <!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
 <!--[if IE 8]><html class="preIE9"><![endif]-->
 <!--[if gte IE 9]><!--><html><!--<![endif]-->
-  <head>
-    <link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">
-
-    <meta charset="UTF-8">
-    <title>KidsMath</title>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>KidsMath</title>
   <meta name="author" content="Martin Pelayo, John Grillo, Richard Farr">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
   <link rel="stylesheet" href="css/mathstyle.css" type="text/css">
-  </head>
-  <body background="http://cdn.wallpapersafari.com/25/68/KiWaZL.jpg">
-<div id="header">
-  <a href="index.html">home</a>
-  <a href="resources.html">Recources</a>
-  <a href="about.html">About us</a>
-  <li><a href="other_input.html">Get Your Score</a></li>
-       <h1>About the programmers who made this site.</h1>
-     </div>
-     <main>
-     <div id="who_are_we">
-       <img src="assets/imgs/who_are_we.png" alt="" width="400px" height="300px">
-    </div>
+</head>
+
+<body background="http://cdn.wallpapersafari.com/25/68/KiWaZL.jpg">
+  <div class="header">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home |  </a></li>
+        <li><a href="resources.html">Resources | </a></li>
+        <li><a href="about.html">About Us | </a></li>
+        <li><a href="other_input.html">Get Your Score</a></li>
+      </ul>
+    </nav>
+    <h1>Welcome to KidsMath! -- The FUN Way to Learn Math </h1>
+  </div>
+
+ <main>
+   <h1>About the programmers who made this site.</h1>
+
+   <div id="who_are_we">
+     <img src="assets/imgs/who_are_we.png" alt="" width="400px" height="300px">
+  </div>
 
    <div id="john">
-     <h2>John</h2>
-     <img src="assets/imgs/john-grillo-fresh.jpg" alt="">
-     <p>JOHN GRILLO BIO
-	John Grillo has been developing websites and web applications since the mid 90's. “Back then, Space Jam was quite literally the coolest website ever. It's an internet relic, now, but my god did it inspire me...to be better so I could charge 3x as much as whatever the WB paid that guy for.”
-	John Grillo has ample experience in JavaScript (and libraries including jQuery, Angular and node.js), HTML5, CSS3 as well as various flavors of SQL.  “MSSQL/TSQL is my favorite. It is more stable than MySQL.”
-	John Grillo is an alumni of Pacific University in Forest Grove and has been enrolled in PSU and PCC as well. “I'm taking CodeFellows as a fun refresher course. I have to say that there have been some surprisingly challenging aspects of it. I'm impressed. My favorite project to date has to be the KidsMathGame. I can think of no better way of rebuilding a portfolio, if you have to, than taking a software developer's bootcamp.”
-	John Grillo is an Eagle Scout in the Boy Scouts of America. “My project was using natural predators to control the mosquito population. Mosquitos love lactic acid and carbon dioxide. Guess who whas those in abundance? Athletes! Hillsboro made a stadium next to sizeable bodies of stagnant water. I knew nothing but I knuckled down, did the research and made sure the predators, swallows [EDIT: It is unclear if the they were Mongolian or European].”
-	When not saving the world, John Grillo likes to spend his time playing basketball, exploring the Pacific NW and working on his short stories and novels. “It's a book of ghost stories for ghosts. It is called “Phantasmagoria: The Dream Pageant”.”
-     </p>
+     <h2>John Grillo</h2>
+     <img src="assets/imgs/john-grillo-fresh.jpg" alt="John Grillo">
+     <p>John Grillo has been developing websites and web applications since the mid 90's. “Back then, Space Jam was quite literally the coolest website ever. It's an internet relic, now, but my god did it inspire me...to be better so I could charge 3x as much as whatever the WB paid that guy for.”</p>
+     <p>John Grillo has ample experience in JavaScript (and libraries including jQuery, Angular and node.js), HTML5, CSS3 as well as various flavors of SQL.  “MSSQL/TSQL is my favorite. It is more stable than MySQL.”</p>
+     <p>John Grillo is an alumni of Pacific University in Forest Grove and has been enrolled in PSU and PCC as well. “I'm taking CodeFellows as a fun refresher course. I have to say that there have been some surprisingly challenging aspects of it. I'm impressed. My favorite project to date has to be the KidsMathGame. I can think of no better way of rebuilding a portfolio, if you have to, than taking a software developer's bootcamp.”</p>
+     <p>John Grillo is an Eagle Scout in the Boy Scouts of America. “My project was using natural predators to control the mosquito population. Mosquitos love lactic acid and carbon dioxide. Guess who whas those in abundance? Athletes! Hillsboro made a stadium next to sizeable bodies of stagnant water. I knew nothing but I knuckled down, did the research and made sure the predators, swallows [EDIT: It is unclear if the they were Mongolian or European].”</p>
+     <p>When not saving the world, John Grillo likes to spend his time playing basketball, exploring the Pacific NW and working on his short stories and novels. “It's a book of ghost stories for ghosts. It is called <i>Phantasmagoria: The Dream Pageant</i>.”</p>
    </div>
 
    <div id="martin">
@@ -48,10 +53,10 @@
      </p>
    </div>
 
-
+   <div id="sharon">
+     <h2>Sharon Smith</h2>
+     <p>Sharon frequently describes herself as a "Designer & Maker of Things Physical & Digital".</p>
    </main>
-   <script type="text/javascript" src="john.js"></script>
-   <script type="text/javascript" src="martin.js"></script>
-   <script type="text/javascript" src="farr.js"></script>
+
   </body>
 </html>
