--- a/about.html
+++ b/about.html
@@ -41,10 +41,12 @@
    <div id="martin">
      <h2>Martin</h2>
       <img src="assets/imgs/martin-pelayo.jpg" alt="" style="width:200px;height:200px;">
-     <p>This is some example code.........
-       ....................................
-       ....................................
-       ....................................
+     <p>In order to keep his vow, Martin traveled the world in order to learn from the
+        best martial artists, criminologists, psychologists and others to prepare himself
+         for his calling. After completing his preparations, he returned to Gotham where
+          he quickly learned he needed to become the bat in order to complete his mission.
+           Under the cape and cowl, he now patrols the streets of Gotham.
+           With the help of his sidekicks HTML, CSS and Javascript, Gotham now has a new hero.
      </p>
    </div>
 
