--- a/index.html
+++ b/index.html
@@ -42,23 +42,15 @@
          <legend>speed</legend>
          <input type="radio" name="speedType" value="easy" checked> Easy - 20 seconds to answer each one. <br>
          <input type="radio" name="speedType" value="medium">Medium - 10 seconds, no sweat. <br>
-         <input type="radio" name="speedType" value="hard"> Hard - 5. 5 what? 5 nothing! <br>
+         <input type="radio" name="speedType" value="hard"> Hard - 5, 5 what? 5 nothing! <br>
        </fieldset>
        <input type="submit" value="submit" name="submit" id="submit">
      </form>
 
-<!-- Starting the form for John's game functions.
-     This should apear after the above submit button is clicked perhaps.
+<div id="results">
 
-    <div id="game_div"
-      <form id="game">
-        <h2>Your playing the best math game ever</h2>
-        Type your answer here:<br>
-          <input type="text" name="comment" value="" size="50">
-          <input type="submit" value="Submit Answer">
-      </form>
-    </div>
--->
+</div>
+
 
     </main>
     <script type="text/javascript" src="assets/js/john.js"></script>
