more CSS, tied to all pages now although about page not styled yet

--- a/about.html
+++ b/about.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<!--[if lte IE 6]><html class="preIE7 preIE8 preIE9"><![endif]-->
-<!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
-<!--[if IE 8]><html class="preIE9"><![endif]-->
-<!--[if gte IE 9]><!--><html><!--<![endif]-->
+<html>
+
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">
   <meta charset="UTF-8">
   <title>KidsMath</title>
-  <meta name="author" content="Martin Pelayo, John Grillo, Richard Farr">
+  <meta name="author" content="Martin Pelayo, John Grillo, Sharon Smith, Richard Farr">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Short+Stack" rel="stylesheet">
   <link rel="stylesheet" href="css/mathstyle.css" type="text/css">
 </head>
 
-<body background="http://cdn.wallpapersafari.com/25/68/KiWaZL.jpg">
+<body background="assets/imgs/background.jpg">
   <div class="header">
     <nav>
       <ul>
@@ -28,10 +26,9 @@
 
  <main>
    <h1>About the programmers who made this site.</h1>
-
    <div id="who_are_we">
      <img src="assets/imgs/who_are_we.png" alt="" width="400px" height="300px">
-  </div>
+   </div>
 
    <div id="john">
      <h2>John Grillo</h2>
@@ -44,19 +41,28 @@
    </div>
 
    <div id="martin">
-     <h2>Martin</h2>
-      <img src="assets/imgs/martin-pelayo.jpg" alt="" style="width:200px;height:200px;">
-     <p>This is some example code.........
-       ....................................
-       ....................................
-       ....................................
-     </p>
+     <h2>Martin Pelayo</h2>
+     <img src="assets/imgs/martin-pelayo.jpg" alt="Martin Pelayo" style="width:200px;height:200px;">
+     <p>In order to keep his vow, Martin traveled the world in order to learn from the best martial artists, criminologists, psychologists and others to prepare himself for his calling. After completing his preparations, he returned to Gotham where he quickly learned he needed to become the bat in order to complete his mission. Under the cape and cowl, he now patrols the streets of Gotham. With the help of his sidekicks HTML, CSS and Javascript, Gotham now has a new hero.</p>
    </div>
 
    <div id="sharon">
      <h2>Sharon Smith</h2>
-     <p>Sharon frequently describes herself as a "Designer & Maker of Things Physical & Digital".</p>
-   </main>
+     <p>Sharon frequently describes herself as a "Designer & Maker of Things, Physical & Digital". She'd much rather spend her days in studio, pounding on metal. Nights, too. Well, at least nights when she wasn't out a club somewhere listening to a cool band. Or browsing Powell's, aka the coolest thing in Portland. Which is pretty damn cool. Her personal motto is "Sleep is for the weak!"</p>
+     <ul>
+       <li><a href="http://sharonsmithdesign.com">SEE her not-as-impressive-as-it-should-be design portfolio!</a></li>
+       <li><a href="http://sharonsmithmetals.com">MARVEL at her seriously awesome artwork!</a></li>
+       <li><a href="https://www.linkedin.com/in/sharonsmithmetalsdesign">HIRE her because she really needs a job!</a></li>
+     </ul>
+   </div>
 
-  </body>
+   <div id="richard">
+     <h2>Richard Farr</h2>
+     <p>KidsMathGame is the brain child of Richard Farr. Farr originally conceived of the idea by wanting to make his own game for his son to learn math. “Starting conditions are everything. I wanted to make sure that he learned math the right way. You can't go through life not knowing math.”  Farr successfully swayed his CodeFellows 201 teammates of his project by saying that “It's brilliantly simple. Meeting the technical Requirements should be easy and then we can focus on making it go from “good” to “great.”</p>
+     <p>Richard Farr is an advertising and Google Ad-words master. His favorite t-shirt reads “Rank for show, convert for dough.”  He originally took the CodeFellows 201 course with the idea of being able to automate portions of my job. “I love playing with my son, rough-housing and wrestling with him really is my hobby.”  Farr's other hobbies are family time, keeping physically fit and cooking.</p>
+     <p>Richard Farr hails from the town of Bend, Oregon. “I wouldn't want to live anywhere else. Our local dentist won the world championship for paragliding! It isn't just Portland that's wondeful and weird.”</p>
+     <p><a href="https://github.com/Richard76"> Richard's Github page</a></p>
+  </main>
+</body>
+
 </html>
