--- a/other_input.html
+++ b/other_input.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">
-    <meta charset="UTF-8">
-        <title>KidsMath</title>
-      <meta name="author" content="Martin Pelayo, John Grillo, Richard Farr">
-      <meta name="description" content="description here">
-      <meta name="keywords" content="keywords,here">
-      <link rel="stylesheet" href="css/mathstyle.css" type="text/css">
-      </head>
-      <body background="http://cdn.wallpapersafari.com/25/68/KiWaZL.jpg">
-        <div id="header">
-          <a href="index.html">home</a>
-          <a href="resources.html">Recources</a>
-          <a href="about.html">About us</a>
-          <a href="other_input.html">Make your complaints here.</a>
+
+<head>
+  <meta charset="UTF-8">
+  <title>KidsMath</title>
+  <meta name="author" content="Martin Pelayo, John Grillo, Sharon Smith, Richard Farr">
+  <meta name="description" content="description here">
+  <meta name="keywords" content="keywords,here">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Short+Stack" rel="stylesheet">
+  <link rel="stylesheet" href="css/mathstyle.css" type="text/css">
+</head>
+
+<body background="assets/imgs/background.jpg">
+  <div class="header">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home |  </a></li>
+        <li><a href="resources.html">Resources | </a></li>
+        <li><a href="about.html">About Us | </a></li>
+        <li><a href="other_input.html">Get Your Score</a></li>
+      </ul>
+    </nav>
+    <h1>Welcome to KidsMath! -- The FUN Way to Learn Math </h1>
   </div>
 
-<div id="complaint">
- <h2>If you where frustrated by the programming of this site, you can send yourself a complaint here</h2>
+<div id="score">
+ <h2>Would you like a copy of your scores? Submit the form below</h2>
 
- <form action="mailto:someone@example.com" method="post" enctype="text/plain">
+ <form class="form" action="mailto:someone@example.com" method="post" enctype="text/plain">
  Name:<br>
- <input type="text" name="name" value="Batman"><br>
+ <input class="text-box" type="text" name="name" value="Batman"><br>
  E-mail:<br>
- <input type="text" name="mail" value="MOOOO@COW.COM"><br>
+ <input class="text-box" type="text" name="mail" value="MOOOO@COW.COM"><br>
  Comment:<br>
- <input type="text" name="comment" value="IM BATMAN!" size="50"><br><br>
- <input type="submit" value="Send">
- <input type="reset" value="Reset">
+ <input class="text-box" type="text" name="comment" value="IM BATMAN!" size="50"><br><br>
+ <input class="button"type="submit" value="Send">
+ <input type="button" value="Reset">
  </form>
 </div>
 
