--- a/resources.html
+++ b/resources.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
-<!--[if lte IE 6]><html class="preIE7 preIE8 preIE9"><![endif]-->
-<!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
-<!--[if IE 8]><html class="preIE9"><![endif]-->
-<!--[if gte IE 9]><!--><html><!--<![endif]-->
-  <head>
-    <link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">
+<html>
 
-    <meta charset="UTF-8">
-    <title>KidsMath</title>
-  <meta name="author" content="Martin Pelayo, John Grillo, Richard Farr">
+<head>
+  <meta charset="UTF-8">
+  <title>KidsMath</title>
+  <meta name="author" content="Martin Pelayo, John Grillo, Sharon Smith, Richard Farr">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Short+Stack" rel="stylesheet">
   <link rel="stylesheet" href="css/mathstyle.css" type="text/css">
-  </head>
-  <body background="http://cdn.wallpapersafari.com/25/68/KiWaZL.jpg">
-<div id="header">
-  <a href="index.html">Home</a>
-  <a href="resources.html">Resources</a>
-  <a href="about.html">About us</a>
-  <a href="other_input.html">Make your complaints here.</a>
+</head>
+
+<body background="http://cdn.wallpapersafari.com/25/68/KiWaZL.jpg">
+  <div class="header">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home |  </a></li>
+        <li><a href="resources.html">Resources | </a></li>
+        <li><a href="about.html">About Us | </a></li>
+        <li><a href="other_input.html">Get Your Score</a></li>
+      </ul>
+    </nav>
+    <h1>Welcome to KidsMath! -- The FUN Way to Learn Math </h1>
+  </div>
+  <main>
      <h1>Here are a few helpful resources that will help you on your way.</h1>
-   </div>
-   <main>
      <ul>
        <li><a href="https://www.khanacademy.org/">khanacademy</a></li>
        <li><a href="https://www.purplemath.com">PurpleMath</a></li>
        <li><a href="https://betterexplained.com/">BetterExplained</a></li>
      </ul>
-   </main>
-   <script type="text/javascript" src="john.js"></script>
-   <script type="text/javascript" src="martin.js"></script>
-   <script type="text/javascript" src="farr.js"></script>
-  </body>
+  </main>
+</body>
+
 </html>
