just about all of the CSS is done except for some tweaks. Which is good because it's about 6:30am & I should probably get something resembling some sleep at some point

--- a/about.html
+++ b/about.html
@@ -21,18 +21,14 @@
         <li><a href="other_input.html">Get Your Score</a></li>
       </ul>
     </nav>
-    <h1>Welcome to KidsMath! -- The FUN Way to Learn Math </h1>
+    <h1>KidsMath</h1>
+    <h2>About the programmers who made this site</h2>
   </div>
 
  <main>
-   <h1>About the programmers who made this site.</h1>
-   <div id="who_are_we">
-     <img src="assets/imgs/who_are_we.png" alt="" width="400px" height="300px">
-   </div>
-
-   <div id="john">
-     <h2>John Grillo</h2>
+   <div class="text-block" id="john">
      <img src="assets/imgs/john-grillo-fresh.jpg" alt="John Grillo">
+     <h3>John Grillo</h3>
      <p>John Grillo has been developing websites and web applications since the mid 90's. “Back then, Space Jam was quite literally the coolest website ever. It's an internet relic, now, but my god did it inspire me...to be better so I could charge 3x as much as whatever the WB paid that guy for.”</p>
      <p>John Grillo has ample experience in JavaScript (and libraries including jQuery, Angular and node.js), HTML5, CSS3 as well as various flavors of SQL.  “MSSQL/TSQL is my favorite. It is more stable than MySQL.”</p>
      <p>John Grillo is an alumni of Pacific University in Forest Grove and has been enrolled in PSU and PCC as well. “I'm taking CodeFellows as a fun refresher course. I have to say that there have been some surprisingly challenging aspects of it. I'm impressed. My favorite project to date has to be the KidsMathGame. I can think of no better way of rebuilding a portfolio, if you have to, than taking a software developer's bootcamp.”</p>
@@ -40,28 +36,31 @@
      <p>When not saving the world, John Grillo likes to spend his time playing basketball, exploring the Pacific NW and working on his short stories and novels. “It's a book of ghost stories for ghosts. It is called <i>Phantasmagoria: The Dream Pageant</i>.”</p>
    </div>
 
-   <div id="martin">
-     <h2>Martin Pelayo</h2>
-     <img src="assets/imgs/martin-pelayo.jpg" alt="Martin Pelayo" style="width:200px;height:200px;">
+   <div class="text-block" id="martin">
+     <img src="assets/imgs/martin-pelayo.jpg" alt="Martin Pelayo">
+     <h3>Martin Pelayo</h3>
      <p>In order to keep his vow, Martin traveled the world in order to learn from the best martial artists, criminologists, psychologists and others to prepare himself for his calling. After completing his preparations, he returned to Gotham where he quickly learned he needed to become the bat in order to complete his mission. Under the cape and cowl, he now patrols the streets of Gotham. With the help of his sidekicks HTML, CSS and Javascript, Gotham now has a new hero.</p>
    </div>
 
-   <div id="sharon">
-     <h2>Sharon Smith</h2>
-     <p>Sharon frequently describes herself as a "Designer & Maker of Things, Physical & Digital". She'd much rather spend her days in studio, pounding on metal. Nights, too. Well, at least nights when she wasn't out a club somewhere listening to a cool band. Or browsing Powell's, aka the coolest thing in Portland. Which is pretty damn cool. Her personal motto is "Sleep is for the weak!"</p>
-     <ul>
+   <div class="text-block" id="sharon">
+     <img src="assets/imgs/Sharon-Smith.jpg" alt="Sharon Smith is up to something">
+     <h3>Sharon Smith</h3>
+     <p>Sharon frequently describes herself as a "Designer & Maker of Things, Physical & Digital". She'd much rather spend her days in studio, pounding on metal. Nights, too. Well, at least nights when she isn't out a club somewhere listening to a cool band. Or browsing Powell's, aka the coolest thing in Portland. Which is pretty damn cool, given how cool Portland is just generally.</p>
+     <p>Her personal motto is "Sleep is for the weak!" Which she can frequently be heard shouting at 3 am the day before a project is due.</p>
+     <ul id="sharon-list">
        <li><a href="http://sharonsmithdesign.com">SEE her not-as-impressive-as-it-should-be design portfolio!</a></li>
        <li><a href="http://sharonsmithmetals.com">MARVEL at her seriously awesome artwork!</a></li>
        <li><a href="https://www.linkedin.com/in/sharonsmithmetalsdesign">HIRE her because she really needs a job!</a></li>
      </ul>
    </div>
 
-   <div id="richard">
-     <h2>Richard Farr</h2>
+   <div class="text-block" id="richard">
+     <img src="assets/imgs/richard-farr.jpg" alt="Richard Farr">
+     <h3>Richard Farr</h3>
      <p>KidsMathGame is the brain child of Richard Farr. Farr originally conceived of the idea by wanting to make his own game for his son to learn math. “Starting conditions are everything. I wanted to make sure that he learned math the right way. You can't go through life not knowing math.”  Farr successfully swayed his CodeFellows 201 teammates of his project by saying that “It's brilliantly simple. Meeting the technical Requirements should be easy and then we can focus on making it go from “good” to “great.”</p>
-     <p>Richard Farr is an advertising and Google Ad-words master. His favorite t-shirt reads “Rank for show, convert for dough.”  He originally took the CodeFellows 201 course with the idea of being able to automate portions of my job. “I love playing with my son, rough-housing and wrestling with him really is my hobby.”  Farr's other hobbies are family time, keeping physically fit and cooking.</p>
+     <p>Richard Farr is an advertising and Google Ad-words master. His favorite t-shirt reads “Rank for show, convert for dough.”  He originally took the CodeFellows 201 course with the idea of being able to automate portions of his job. “I love playing with my son, rough-housing and wrestling with him really is my hobby.”  Farr's other hobbies are family time, keeping physically fit and cooking.</p>
      <p>Richard Farr hails from the town of Bend, Oregon. “I wouldn't want to live anywhere else. Our local dentist won the world championship for paragliding! It isn't just Portland that's wondeful and weird.”</p>
-     <p><a href="https://github.com/Richard76"> Richard's Github page</a></p>
+     <p><a href="https://github.com/Richard76">Richard's Github page</a></p>
   </main>
 </body>
 
