--- a/resources.html
+++ b/resources.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Short+Stack" rel="stylesheet">
   <meta charset="UTF-8">
   <title>KidsMath</title>
   <meta name="author" content="Martin Pelayo, John Grillo, Sharon Smith, Richard Farr">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Short+Stack" rel="stylesheet">
   <link rel="stylesheet" href="css/mathstyle.css" type="text/css">
 </head>
 
-<body background="http://cdn.wallpapersafari.com/25/68/KiWaZL.jpg">
+<body background="assets/imgs/background.jpg">
   <div class="header">
     <nav>
       <ul>
@@ -21,16 +21,19 @@
         <li><a href="other_input.html">Get Your Score</a></li>
       </ul>
     </nav>
-    <h1>Welcome to KidsMath! -- The FUN Way to Learn Math </h1>
+    <h1>KidsMath</h1>
+    <h2>The FUN Way to Learn Math!</h2>
   </div>
-  <main>
-     <h1>Here are a few helpful resources that will help you on your way.</h1>
+
+ <main class="resources">
+   <div class="text-block">
+     <h3>Here's some further resources for your mathematical educational edification.</h3>
      <ul>
        <li><a href="https://www.khanacademy.org/">khanacademy</a></li>
        <li><a href="https://www.purplemath.com">PurpleMath</a></li>
        <li><a href="https://betterexplained.com/">BetterExplained</a></li>
      </ul>
-  </main>
-</body>
+   </div>
+ </main>
 
 </html>
